# miniRobot

./: .env  .gitignore  Cargo.toml  README.md  build.rs  config.toml
.github/workflows/: ci.yml  release.yml  rust.yml
doc/: .$systemModel.drawio.bkp  systemModel.drawio  系统设计.docx  项目管理.xlsx
src/: config.rs  host.rs  lib.rs  main.rs
src/actors/: console.rs  ftp.rs  http.rs  mod.rs  shell.rs
src/common/: api.rs  config.rs  ds.rs  logger.rs  mod.rs
src/communicate/: mod.rs  peer_manager.rs  peer_node.rs
src/info/: cpu.rs  disk.rs  hostinfo.rs  hostname.rs  memory.rs  mod.rs  network.rs  os.rs  process.rs  service.rs
src/local/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  os.rs  process.rs
src/monitor/: desktop_inform.rs  event.rs  mod.rs  monitor.rs
src/monitor/env/: mod.rs
src/monitor/system/: disk_usage.rs  mod.rs  open_port.rs
src/monitor/task/: status.rs
src/network/: mod.rs  peer_node_communication.rs
src/network/proto/: peer_node_communication.proto
src/scheduler/: env.rs  mod.rs  task.rs
src/security/: authentication.rs  encryption.rs  mod.rs
src/task/: job.rs  mod.rs  task.rs
src/tests/: mod.rs  test_case.rs  test_module.rs  test_order.rs  test_suite.rs
tests/: global_test.rs  integration_test.rs  test_runner.rs
tests/integration_test/: global.py
tests/integration_test/local/: cpu_test.py  disk_test.py  testsuite.py
tests/integration_test/network/: browser_communication_test.py  peer_manager_test.py  testsuite.py
tests/integration_test/security/: authentication_test.py  testsuite.py
tests/local/: cpu_test.py  cpu_test.rs  disk_test.py  module_test.rs
tests/network/: module_test.py  module_test.rs  peer_manager_test.py
tests/security/: module_test.rs
