[package]
name = "mini_robot"
version = "0.1.0"
authors = ["gh503 <angus_robot@163.com>"]
about = "Good Friend Make Your Hands Free"
edition = "2021"

[dependencies]
hostname = "0.3.1"
pnet = "0.34.0"
log = "0.4"
env_logger = "0.10"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30.12"

toml = "0.8.13"

tonic = { version = "0.11.0", features = ["transport"] }
warp = "0.3.7"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
chrono = "0.4.38"
prost = "0.12.6"

rayon = "1.10.0"
clap = { version = "4.5.4", features = ["derive"] }

ring = "0.17.8"
untrusted = "0.9.0"
base64 = "0.22.1"

argon2 = "0.5.3"
rand = "0.8.5"

walkdir = "2.5.0"
regex = "1.10.4"

syn = { version = "2.0.66", features = ["full"] }
quote = "1.0.36"
# 集成测试
pyo3 = { version = "0.21.2", features = ["extension-module", "auto-initialize"] }
rust-embed = "8.4.0"
pyoxidizer = "0.24.0"

openssl = "0.10.64"
jsonwebtoken = "9.3.0"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.13"
tonic-build = "0.11.0"

# 集成测试编译
pyo3-build-config = "0.21.2"
pyoxidizer = "0.24.0"

[package.metadata]
pyo3 = { extension-module = false }

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
