[package]
name = "minirobot"
version = "0.0.2"
authors = ["gh503 <angus_robot@163.com>"]
description = "Good Friend Make Your Hands Free"
edition = "2021"
repository = "https://github.com/gh503/miniRobot"
readme = "README.md"
license-file = "LICENSE"
keywords = ["robot", "security", "ssh", "gRPC", "websocket"]
categories = ["accessibility", "os", "network-programming", "web-programming"]
build = "build.rs"

[dependencies]
hostname = "0.3.1"
pnet = "0.34.0"
log = "0.4"
env_logger = "0.10"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30.12"

tonic = { version = "0.11.0", features = ["transport"] }
warp = "0.3.7"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
chrono = "0.4.38"
prost = "0.12.6"

rayon = "1.10.0"
clap = { version = "4.5.4", features = ["derive"] }

ring = "0.17.8"
untrusted = "0.9.0"
base64 = "0.22.1"

argon2 = "0.5.3"
rand = "0.8.5"

walkdir = "2.5.0"
regex = "1.10.4"

syn = { version = "2.0.66", features = ["full"] }
quote = "1.0.36"

openssl = "0.10.64"
jsonwebtoken = "9.3.0"

uuid = { version = "1.8.0", features = ["v4"] }

diesel = { version = "2.2.0", features = ["sqlite", "mysql"] }

[features]
default = ["diesel/sqlite"]
sqlite = ["diesel/sqlite"]
mysql = ["diesel/mysql"]

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
toml = "0.8.13"
tonic-build = "0.11.0"

[[bin]]
name = "minirobot"
path = "src/main.rs"

[[bin]]
name = "minirobot_info"
path = "src/bin/info.rs"

[[bin]]
name = "minirobot_env_manager"
path = "src/bin/env_manager.rs"

[[bin]]
name = "minirobot_asset_manager"
path = "src/bin/asset_manager.rs"

[[bin]]
name = "minirobot_task_manager"
path = "src/bin/task_manager.rs"

[[bin]]
name = "minirobot_actor"
path = "src/bin/actor.rs"

[[test]]
name = "integration"
path = "tests/test_runner.rs"
